[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/DialogueBox.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="dialogue_style"]
bg_color = Color(0.08, 0.06, 0.12, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.6, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="choice_style"]
bg_color = Color(0.1, 0.08, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.6, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="LeftPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.38
anchor_right = 0.17
anchor_bottom = 0.73
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5
expand_mode = 1
mouse_filter = 2

[node name="RightPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.83
anchor_top = 0.38
anchor_right = 0.98
anchor_bottom = 0.73
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5
expand_mode = 1
mouse_filter = 2

[node name="DialoguePanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_styles/panel = SubResource("dialogue_style")

[node name="Margin" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="DialoguePanel/Margin"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="TextLabel" type="RichTextLabel" parent="DialoguePanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 16

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "â–¼"
horizontal_alignment = 2

[node name="ChoiceDimmer" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
mouse_filter = 2

[node name="ChoicePanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.15
anchor_right = 0.75
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("choice_style")

[node name="Margin" type="MarginContainer" parent="ChoicePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="ChoicePanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PromptLabel" type="Label" parent="ChoicePanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="ChoicePanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
